# libscrcpypp

./: .gitlab-ci.yml  CMakeLists.txt
src/: client.cpp  client.hpp  control_msg.cpp  control_msg.hpp
test/: control_test.cpp  reconnect_test.cpp
